--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
+    <title>Coursework</title>
     <link rel="stylesheet" href="css/bootstrap.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -19,48 +19,90 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="text-align: center;" href="#">
+                        <a class="nav-link" style="text-align: center;" href="#fisic">
                             физико-<br>географический очерк
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="text-align: center;" href="#">
+                        <a class="nav-link" style="text-align: center;" href="#social">
                             социально-<br>экономический очерк
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="text-align: center;" href="#">
+                        <a class="nav-link" style="text-align: center;" href="#war">
                             военно-<br>политический очерк
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="text-align: center;" href="#">
+                        <a class="nav-link" style="text-align: center;" href="#base">
                             база данных
                         </a>
                     </li>
                 </ul>
             </nav>
+            <div class="see">
+                <h1 id="see">
+                    Северное море
+                </h1>
+                <p style="margin-top: -5px;">
+                    Учебная практика студента 1-го курса<br>Баширова Р.Э.
+                </p>
+            </div>
         </div>
+
     </header>
     <section class="main">
-        <div class="container">
-            <h1 class="more">
-                Северное море
-            </h1>
-            <p class="student">
-                Учебная практика студента 1-го курса<br>Баширова Р.Э.
-            </p>
+        <div class="container" id="menu">
+            <div class="card fisic" id="fisic">
+                <div class="card-header">
+                    Физико-географический очерк
+                </div>
+                <div class="card-body">
+                    <p class="card-text">Северное море расположено между островами Великобритания, Оркнейскими и Шетлендскими на З., Скандинавским и Ютландским полуостровами на В. и побережьем Европы на Ю. Сообщается на С. с Норвежским морем, на В. проливами Скагеррак, Каттегат, Эресунн, Большой и Малый Бельт — с Балтийским морем, на Ю.-З. проливами Па-де-Кале, а затем Ла-Манш и на С.-З. проливами между островами — с Атлантическим океаном. Омывает берега Великобритании, Франции, Бельгии, Нидерландов, ФРГ, Дании и Норвегии.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Подробнее</a>
+                </div>
+            </div>
+            <div class="card social" id="social">
+                <div class="card-header">
+                    Социально-экономический очерк
+                </div>
+                <div class="card-body">
+                    <p class="card-text">Хозяйственное значение С. м. определяется тем, что на его берегах расположены наиболее развитые индустриальные страны Западной Европы (Великобритания, Франция, ФРГ, Бельгия, Нидерланды и скандинавские страны) и по морю проходят важные торговые пути из Балтийского моря в Атлантический океан; крупными рыбными ресурсами, месторождениями нефти и природного газа.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Подробнее</a>
+                </div>
+            </div>
+            <div class="card war" id="war">
+                <div class="card-header">
+                    Военно-политический очерк
+                </div>
+                <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Подробнее</a>
+                </div>
+            </div>
+            <div class="card date" id="base">
+                <div class="card-header">
+                    База данных
+                </div>
+                <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Подробнее</a>
+                </div>
+            </div>
         </div>
     </section>
     <footer class="footer">
         <div class="container">
-
+            <p style="margin: 0; padding: 20px 0 20px 50px;">Все права защищены</p>
         </div>
     </footer>
-    <div class="js">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    </div>
 </body>
 </html>
