--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="text-align: center;" href="#fisic">
+                        <a class="nav-link" style="text-align: center;" href="/physical.html">
                             физико-<br>географический очерк
                         </a>
                     </li>
@@ -49,7 +49,6 @@
                 </p>
             </div>
         </div>
-
     </header>
     <section class="main">
         <div class="container" id="menu">
@@ -61,7 +60,7 @@
                     <p class="card-text">Северное море расположено между островами Великобритания, Оркнейскими и Шетлендскими на З., Скандинавским и Ютландским полуостровами на В. и побережьем Европы на Ю. Сообщается на С. с Норвежским морем, на В. проливами Скагеррак, Каттегат, Эресунн, Большой и Малый Бельт — с Балтийским морем, на Ю.-З. проливами Па-де-Кале, а затем Ла-Манш и на С.-З. проливами между островами — с Атлантическим океаном. Омывает берега Великобритании, Франции, Бельгии, Нидерландов, ФРГ, Дании и Норвегии.</p>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Подробнее</a>
+                    <a href="/physical.html" class="btn btn-primary">Подробнее</a>
                 </div>
             </div>
             <div class="card social" id="social">
