--- a/site/physical.html
+++ b/site/physical.html
@@ -15,7 +15,7 @@
                 <a class="navbar-brand" href="#">BRD27</a>
                 <ul class="nav nav-tabs nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link" style="text-align: center;" href="../index.html">
+                        <a class="nav-link" style="text-align: center;" href="../coursework/index.html">
                             главная
                         </a>
                     </li>
