--- a/site/physical.html
+++ b/site/physical.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Физико-географический очерк</title>
-    <link rel="stylesheet" href="/css/bootstrap.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/physical.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/bootstrap.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/physical.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <header class="header">
@@ -15,7 +15,7 @@
                 <a class="navbar-brand" href="#">BRD27</a>
                 <ul class="nav nav-tabs nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link" style="text-align: center;" href="/index.html">
+                        <a class="nav-link" style="text-align: center;" href="../coursework/index.html">
                             главная
                         </a>
                     </li>
