--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="text-align: center;" href="../coursework/site/physical.html">
+                        <a class="nav-link" style="text-align: center;" href="../site/physical.html">
                             физико-<br>географический очерк
                         </a>
                     </li>
