--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <p class="card-text">Северное море расположено между островами Великобритания, Оркнейскими и Шетлендскими на З., Скандинавским и Ютландским полуостровами на В. и побережьем Европы на Ю. Сообщается на С. с Норвежским морем, на В. проливами Скагеррак, Каттегат, Эресунн, Большой и Малый Бельт — с Балтийским морем, на Ю.-З. проливами Па-де-Кале, а затем Ла-Манш и на С.-З. проливами между островами — с Атлантическим океаном. Омывает берега Великобритании, Франции, Бельгии, Нидерландов, ФРГ, Дании и Норвегии.</p>
                 </div>
                 <div class="card-footer">
-                    <a href="/physical.html" class="btn btn-primary">Подробнее</a>
+                    <a href="../site/physical.html" class="btn btn-primary">Подробнее</a>
                 </div>
             </div>
             <div class="card social" id="social">
