--- a/site/physical.html
+++ b/site/physical.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Физико-географический очерк</title>
-    <link rel="stylesheet" href="../css/bootstrap.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/physical.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../coursework/css/bootstrap.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="../coursework/css/physical.css">
+    <link rel="stylesheet" href="../coursework/css/main.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
             <nav class="navbar">
-                <a class="navbar-brand" href="../index.html">BRD27</a>
+                <a class="navbar-brand" href="../coursework/index.html">BRD27</a>
                 <ul class="nav nav-tabs nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link" style="text-align: center;" href="../index.html">
+                        <a class="nav-link" style="text-align: center;" href="../coursework/index.html">
                             главная
                         </a>
                     </li>
@@ -50,5 +50,27 @@
                 </p>
             </div>
         </div>
-</body>
+    </header>
+        <section>
+            <div class="container">
+                <div class="wrapper">
+                    <div>
+                        <h2>
+                            Физико-географическое описание
+                        </h2>
+                        <p>
+                            С. м. расположено между островами Великобритания, Оркнейскими и Шетлендскими на З., Скандинавским и Ютландским полуостровами на В. и побережьем Европы на Ю. 
+                            Омывает берега Великобритании, Франции, Бельгии, Нидерландов, ФРГ, Дании и Норвегии. 
+                            Площадь 544 тыс. км2, средняя глубина 96 м, объём 42 тыс. км3.
+                            Поверхность дна представляет собой слабо наклоненную к С. равнину с глубинами от 20—30 до 150—170 м и множеством небольших банок, сложенных продуктами размыва моренных отложений ледника, покрывавшего в плейстоцене всю поверхность морского дна.
+                            Дно моря сложено мощными (до 10—12 км) толщами осадочных отложений от пермских до антропогеновых (в т. ч. ледниковых), образующих систему пологих поднятий и впадин платформенного чехла. Наиболее крупные поднятия — Ютландское, Доггер-банка, впадины — Северная, Северодатская, Английская. 
+
+                        </p>
+                    </div>
+                    <img src="" alt="">
+                </div>
+            </div>
+        </section>
+
+    </body>
 </html>
