--- a/site/physical.html
+++ b/site/physical.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Физико-географический очерк</title>
-    <link rel="stylesheet" href="../coursework/css/bootstrap.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="../coursework/css/physical.css">
-    <link rel="stylesheet" href="../coursework/css/main.css">
+    <link rel="stylesheet" href="../css/bootstrap.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/physical.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <header class="header">
