--- a/site/physical.html
+++ b/site/physical.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="container">
             <nav class="navbar">
-                <a class="navbar-brand" href="../coursework/index.html">BRD27</a>
+                <a class="navbar-brand" href="../index.html">BRD27</a>
                 <ul class="nav nav-tabs nav-fill">
                     <li class="nav-item">
                         <a class="nav-link" style="text-align: center;" href="../index.html">
