--- a/site/physical.html
+++ b/site/physical.html
@@ -54,23 +54,68 @@
         <section>
             <div class="container">
                 <div class="wrapper">
-                    <div>
+                    <div id="content">
                         <h2>
                             Физико-географическое описание
                         </h2>
                         <p>
-                            С. м. расположено между островами Великобритания, Оркнейскими и Шетлендскими на З., Скандинавским и Ютландским полуостровами на В. и побережьем Европы на Ю. 
-                            Омывает берега Великобритании, Франции, Бельгии, Нидерландов, ФРГ, Дании и Норвегии. 
-                            Площадь 544 тыс. км2, средняя глубина 96 м, объём 42 тыс. км3.
-                            Поверхность дна представляет собой слабо наклоненную к С. равнину с глубинами от 20—30 до 150—170 м и множеством небольших банок, сложенных продуктами размыва моренных отложений ледника, покрывавшего в плейстоцене всю поверхность морского дна.
+                            С. м. расположено между островами Великобритания, Оркнейскими и Шетлендскими на З., Скандинавским и Ютландским полуостровами на В. и побережьем Европы на Ю.<br><br>
+                            Омывает берега Великобритании, Франции, Бельгии, Нидерландов, ФРГ, Дании и Норвегии.<br><br>
+                            <span>Площадь 544 тыс. км2, средняя глубина 96 м, объём 42 тыс. км3.</span><br><br>
+                            Поверхность дна представляет собой слабо наклоненную к С. равнину с глубинами от 20—30 до 150—170 м и множеством небольших банок, сложенных продуктами размыва моренных отложений ледника, покрывавшего в плейстоцене всю поверхность морского дна.<br><br>
                             Дно моря сложено мощными (до 10—12 км) толщами осадочных отложений от пермских до антропогеновых (в т. ч. ледниковых), образующих систему пологих поднятий и впадин платформенного чехла. Наиболее крупные поднятия — Ютландское, Доггер-банка, впадины — Северная, Северодатская, Английская. 
-
                         </p>
                     </div>
-                    <img src="" alt="">
+                    <img src="../img/физ-гиф.png" alt="" id="img" style="width: 32%;">
                 </div>
-            </div>
-        </section>
+                <div class="wrapper">
+                    <img src="../img/физ-гиф2.png" style="width: 35%;" alt="" id="img">
+                    <div id="content"">
+                        <h2>
+                            Климат
+                        </h2>
+                        <p>
+                            Климат С. м. умеренный, находится под непосредственным влиянием согревающего тёплого Северо-Атлантического течения и циклонической деятельности Исландского центра пониженного давления.<br><br>
+
+Зима короткая, относительно мягкая, лето прохладное. В течение года над С. м. господствуют западные и юго-западные ветры, которые достигают наибольшей силы зимой. С ноября по март отмечается наибольшая повторяемость штормов.<br><br>
+
+<span>Средняя температура</span> февраля от 0 °С на В. до 5 °С на З., августа от 15 °С на С. до 17 °С на Ю.  Средняя годовая облачность 6—7 баллов с максимумом зимой. Осадков от 600—700 мм в год на Ю. до 1000 мм на С. Зимой часты снегопады, которые могут сопровождаться сильными шквалами. Характерны туманы, повторяемость которых летом увеличивается.
+                        </p>
+                    </div>
+                </div>
+                <div class="wrapper">
+                    <div id="content">
+                        <h2>
+                            Гидрологические условия                        
+                        </h2>
+                        <p>
+                            Гидрологические условия С. м. определяются его географическим положением, климатическими условиями, водообменом с Атлантическим океаном и Балтийским морем и материковым стоком. <br><br>
+
+                            Основную роль играют тёплые и солёные атлантические воды, поступающие в С. м. двумя потоками: один между Шетлендскими островами и северной оконечностью о. Великобритания, другой — через пролив Па-де-Кале, они определяют повышенную солёность в прилегающих районах. 
+                        </p>
+                    </div>
+                    <img src="../img/физ-гиф3.png" alt="" id="img" style="width: 35%;">
+                </div>
+                <div class="wrapper">
+                    <img src="../img/физ-гиф4.png" alt="" id="img" style="width: 33%;">
+                    <div id="content">
+                        <h2>
+                            Флора и фауна                        
+                        </h2>
+                        <p>
+                            Органический мир С. м. характерен для бореальной Северо-Атлантической зоогеографической области; он очень сходен с баренцевоморским, но разнообразнее за счёт тепловодных форм;<br><br>
+
+                            В С. м. насчитывается около 300 видов растений и более 1500 животных. Это обычные для морей диатомовые и перидиниевые планктонные водоросли и зелёные, бурые и красные макрофиты. 
+                            Среди животных особенно многочисленны ракообразные, черви, моллюски, кишечнополостные и рыбы. Характерны морские птицы-олуши, чайки, кайры и др. 
+                            Для литорали характерны заросли фукоидов, большие поселения мидий, морских желудей, червей-пескожилов, бокоплавов; глубже — много морской травы-зостеры, крупных моллюсков<br><br>
+                            
+                            В 1912 в С. м. судами был завезён китайский краб, который сильно размножился и стал вредителем на Ю., где его норки разрушают берега.<br><br>
+                            
+                             С. м. — один из районов наиболее интенсивного рыболовства; водятся: морская камбала, треска, пикша, сайда, скумбрия, сельдь, шпроты, некоторые скаты и акулы.
+                        </p>
+                    </div>
+                </div>
+</section>
 
     </body>
 </html>
